--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -1,5 +1,5 @@
 .main {
-    background: url(../../img/main/bg.png);
+    background: url(../img/main/bg.png);
     top: 0;
     // .main__wrapper
 
