--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import 'blocks/main';
 @import 'blocks/statistics';
 @import 'blocks/lines';
+@import 'blocks/about';
+@import 'blocks/registration';
 
 
 
