--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,8 @@
 @import 'blocks/lines';
 @import 'blocks/about';
 @import 'blocks/registration';
+@import 'blocks/generalSponsor';
+@import 'blocks/exclusiveSponsor';
 
 
 
