--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -5,6 +5,30 @@
         }
 
     }
+
+    .feels {
+        font-size: 75px;
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 270px);
+    }
+
+    .registration {
+        &__tittle {
+            font-size: 40px;
+        }
+    }
+
+    .conditios {
+        &__tittle {
+            font-size: 26px;
+
+            span {
+                font-size: 18px;
+            }
+        }
+    }
 }
 
 
@@ -69,6 +93,28 @@
             height: 312px;
         }
     }
+
+    .general-sponsor{
+        &__title {
+            font-size: 42px;
+        }
+        &__label{
+            img{
+                width: 70%;
+            }
+        }
+
+        &__text {
+            font-size: 16px;
+        }
+    }
+
+    .exlusive-sponsor{
+        &__item {
+            width: 22%;
+            margin: 15px;
+        }
+    }
 }
 
 //=============================================================== 1270 ======================================================
@@ -82,6 +128,93 @@
     .lines {
         &__text {
             font-size: 20px;
+        }
+    }
+
+    .about {
+        padding-bottom: 150px;
+
+        &__spot {
+            display: none;
+        }
+    }
+
+    .registration {
+        padding-bottom: 180px;
+        &__circle {
+            width: 70%;
+
+            img {
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+
+        &__tittle {
+            font-size: 30px;
+
+            &::after {
+                width: 67px;
+                height: 19px;
+                transform: translateY(2px);
+            }
+
+        }
+    }
+
+    .feels {
+        font-size: 65px;
+        margin-top: -35px;
+    }
+
+    .features {
+        &__tittle {
+            font-size: 40px;
+            max-width: 946px;
+            margin: 0 auto;
+        }
+
+        &__item{
+            font-size: 18px;
+            padding: 10px 40px;
+        } 
+        &__list{
+            max-width: 1100px;
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 240px);
+        grid-template-rows: 288px 200px;
+
+        &__image {
+            width: 110px;
+            height: 110px;
+            top: 20px;
+            right: 20px;
+        }
+
+        &__tittle {
+            font-size: 20px;
+
+            span {
+                font-size: 14px;
+            }
+        }
+
+        &__info {
+            left: 20px;
+            bottom: 20px;
+        }
+    }
+
+    .exlusive-sponsor{
+        padding-bottom: 100px;
+        &__text {
+            font-size: 14px;
+        }
+        &__label{
+            height: 190px;
         }
     }
 
@@ -181,8 +314,72 @@
         }
     }
 
+    .registration{
+        &__tittle {
+            font-size: 24px;
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 215px);
+        grid-template-rows: 240px 163px;
+    
 
 
+
+        &__image {
+            width: 90px;
+            height: 90px;
+        }
+        &__tittle {
+            font-size: 18px;
+            span {
+                font-size: 12px;
+            }
+        }
+    }
+
+    .features{
+        margin-top: 105px;
+        &__tittle {
+            font-size: 34px;
+            max-width: 700px;
+        }
+        &__list {
+            max-width: 940px;
+        }
+        &__item {
+            font-size: 16px;
+            padding: 10px 35px;
+            margin: 10px;
+        }
+    }
+
+    .feels {
+        font-size: 55px;
+        margin-top: -29px;
+    }
+
+    .general-sponsor{
+        &__title {
+            font-size: 35px;
+        }
+       
+
+        &__text {
+            font-size: 13px;
+        }
+    }
+    .title {
+        font-size: 35px;
+    }
+
+    .exlusive-sponsor{
+        &__item {
+            width: 23%;
+            margin: 8px;
+        }
+    }
 }
 
 //=============================================================== 992 ======================================================
@@ -306,8 +503,80 @@
             margin-right: 75px;
         }
 
-        &__spot-red{
+        &__spot-red {
             display: none;
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 185px);
+        grid-template-rows: 215px 145px;
+
+        &__image {
+            width: 75px;
+            height: 75px;   
+        }
+        &__tittle {
+            font-size: 16px;
+            span {
+                font-size: 10px;
+            }
+        }
+    }
+
+    .features{
+        &__tittle {
+            font-size: 29px;
+            max-width: 630px;
+        }
+        &__item {
+            font-size: 14px;
+            padding: 8px 25px;
+            margin: 7px;
+        }
+
+        &__list {
+            max-width: 780px;
+        }
+        &_spot{
+            width: 70%;
+            img{
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    .feels {
+        font-size: 45px;
+        margin-top: -29px;
+    }
+
+    .general-sponsor{
+        &__title {
+            font-size: 30px;
+        }
+
+        &__label{
+            height: 180px;
+        }
+       
+
+        &__text {
+            font-size: 12px;
+        }
+    }
+
+    .title {
+        font-size: 30px;
+    }
+
+    .exlusive-sponsor{
+        &__text {
+            font-size: 12px;
+        }
+        &__link-text {
+            font-size: 14px;
         }
     }
 }
@@ -362,6 +631,80 @@
             margin-right: 50px;
         }
     }
+
+    .registration{
+        &__tittle {
+            font-size : 20px;
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 165px);
+        grid-template-rows: 185px 125px;
+
+        &__image {
+            width: 75px;
+            height: 75px;   
+        }
+        &__tittle {
+            font-size: 14px;
+            span {
+                font-size: 8px;
+            }
+        }
+    }
+
+    .features{
+        &__tittle {
+            font-size: 22px;
+            max-width: 460px;
+            margin-bottom: 20px;
+        }
+        &__spot {
+            transform: translate(-50%, -30%);
+        }
+    }
+    .feels {
+        font-size: 40px;
+        margin-top: -17px;
+    }
+
+    .general-sponsor{
+      
+       
+
+        &__text {
+            br{
+                display: none;
+            }
+        }
+
+        &__contact-text {
+            font-size: 14px;
+        }
+        &__site{
+            margin-right: 15px;
+        }
+        &__item{
+            width: 49%;
+        }
+    }
+
+    .exlusive-sponsor{
+        &__item {
+            width: 46%;
+            margin: 8px;
+        }
+
+        &__label {
+            height: 165px;
+        }
+
+        &__spot2{
+            transform: translate(-10%, -78px);
+    
+        }
+    }
 }
 
 //=============================================================== 768 ======================================================
@@ -383,6 +726,66 @@
 
     .lines {
         &__item {}
+    }
+
+    .registration{
+        &__tittle {
+            font-size: 18px;
+            &:after{
+                width: 45px;
+                height: 12px;
+                margin-left: 10px;
+            }
+        }
+    }
+
+    .conditios{
+        grid-template-columns: repeat(2, 155px);
+        grid-template-rows: 170px 110px;
+        gap: 20px;
+    }
+
+    .general-sponsor{
+
+        &__text {
+            
+        }
+
+        &__contact-text {
+            font-size: 14px;
+        }
+        &__site{
+            margin-right: 15px;
+        }
+        &__item{
+            width: 49%;
+        }
+        &__description {
+            margin-top: 20px;
+            margin-bottom: 15px;
+        }
+        &__site{
+            img{
+                margin-right: 10px;
+            }
+        }
+        &__label {
+            height: 150px;
+        }
+        &__title {
+            font-size: 24px;
+            &:after{
+                height: 4px;
+            }
+        }
+    }
+
+    .title {
+        font-size: 24px;
+
+        &:after{
+            height: 4px;
+        }
     }
 }
 
@@ -469,7 +872,7 @@
     .about {
         padding-bottom: 50px;
 
-        &__wrapper{
+        &__wrapper {
             flex-direction: column;
         }
 
@@ -497,6 +900,86 @@
             margin-right: 0px;
             margin-bottom: 20px;
         }
+    }
+
+    .registration{
+        &__top{
+            flex-direction: column;
+            align-items: center;
+        }
+        &__column {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        &__tittle{
+            margin-bottom: 20px;
+            text-align: center;
+            &:after{
+                display: none;
+            }
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 246px);
+    }
+
+    .features {
+        margin-top: 55px;
+        &__item {
+            font-size: 12px;
+            padding: 8px 16px;
+            margin: 5px;
+        }
+        &__list {
+            max-width: 650px;
+        }
+    }
+
+    .feels {
+        font-size: 30px;
+        margin-top: -12px;
+    }
+
+    .general-sponsor{
+
+
+        &__contact-text {
+            font-size: 12px;
+        }
+       
+        &__item{
+            width: 100%;
+        }
+        &__description {
+            margin-top: 20px;
+            margin-bottom: 15px;
+        }
+        &__site{
+            img{
+                margin-right: 10px;
+            }
+        }
+        &__label {
+            height: 150px;
+        }
+    }
+
+    .exlusive-sponsor{
+        &__item {
+            width: 100%;
+            margin: 8px;
+        }
+        &__label {
+            height: 140px;
+            img {
+                width: 37%;
+                object-fit: cover;
+            }
+        }
+
+
     }
 }
 
@@ -554,6 +1037,39 @@
             font-size: 10px;
         }
 
+    }
+
+    .registration {
+        padding-bottom: 65px;
+        &__tittle {
+            font-size: 16px;
+        }
+    }
+
+    .conditios {
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+
+    .features{
+        &__tittle {
+            font-size: 18px;
+            max-width: 460px;
+            margin-bottom: 20px;
+        }
+        &__list {
+            max-width: 100%;
+            
+        }
+        &__item{
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .feels {
+        font-size: 27px;
+        margin-top: 10px;
     }
 }
 
@@ -644,7 +1160,7 @@
     .about {
         padding-bottom: 30px;
 
-       
+
 
         &__title {
             font-size: 25px;
@@ -664,10 +1180,79 @@
             margin-bottom: 20px;
         }
 
-        &__text{
+        &__text {
             margin-bottom: 10px;
         }
     }
+
+    .conditios {
+        gap: 10px;
+    }
+
+    .features{
+        &__tittle {
+            font-size: 14px;
+        }
+        &__list {
+            max-width: 100%;
+            
+        }
+    }
+
+    .feels {
+        font-size: 18px;
+        margin-top: 10px;
+    }
+
+    .registration__tittle {
+        font-size: 14px;
+    }
+
+
+    .general-sponsor{
+        &__title {
+            font-size: 14px;
+            margin-bottom: 20px;
+            text-align: center;
+            &:after{
+                display: none;
+            }
+        }
+        &__contact-text {
+            font-size: 10px;
+        }
+        &__label {
+            height: 125px;
+            img{
+                width: 60%;
+            }
+        }
+    }
+
+    .title {
+        font-size: 14px;
+        margin-bottom: 20px;
+        text-align: center;
+        &:after{
+            display: none;
+        }
+    }
+
+    .exlusive-sponsor {
+        padding-bottom: 45px;
+        &__link-text  {
+            font-size: 10px;
+        }
+
+        &__label {
+            height: 125px;
+        }
+
+        &__spot1{
+            transform: translate(-202px, -78px);
+        }
+    }
+
 }
 
 
@@ -707,7 +1292,7 @@
             margin-bottom: 20px;
         }
 
-        &__text{
+        &__text {
             margin-bottom: 10px;
         }
     }
